--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Petgram</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Petgram</title>
 </head>
+
 <body>
-  <div id="app"></div>
+    <div id="app"></div>
+    <noscript>
+        <h3>Esta app necesita JavaScript para funcionar</h3>
+    </noscript>
 </body>
+
 </html>
